<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewmodel"
            type="com.route.banksystemapplication.ui.onecustomer.OneCustomerViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.onecustomer.oneCustomer">

        <TextView
            android:id="@+id/txt_head"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="10dp"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="@string/client_information"
            android:padding="5dp"/>

        <TextView
            android:id="@+id/txt_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/txt_head"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="5dp"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="@string/name"/>

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/txt_name"
            app:layout_constraintTop_toTopOf="@id/txt_name"
            app:layout_constraintBottom_toBottomOf="@id/txt_name"
            android:layout_marginStart="5dp"
            android:textSize="16sp"
            tools:text="sherif abdelrhman shehata "
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/txt_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/txt_name"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="10dp"
            android:layout_marginStart="5dp"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="@string/email"/>

        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/txt_email"
            app:layout_constraintTop_toTopOf="@id/txt_email"
            app:layout_constraintBottom_toBottomOf="@id/txt_email"
            android:layout_marginStart="5dp"
            android:textSize="16sp"
            tools:text="sherif abdelrhman shehata "
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/txt_balance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/txt_email"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="10dp"
            android:layout_marginStart="5dp"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="@string/balance"/>

        <TextView
            android:id="@+id/tvBalance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/txt_balance"
            app:layout_constraintTop_toTopOf="@id/txt_balance"
            app:layout_constraintBottom_toBottomOf="@id/txt_balance"
            android:layout_marginStart="5dp"
            android:textSize="16sp"
            tools:text="10000"
            android:textColor="@color/black"/>
        <TextView
            android:id="@+id/dollar_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/tvBalance"
            app:layout_constraintTop_toTopOf="@id/tvBalance"
            app:layout_constraintBottom_toBottomOf="@id/tvBalance"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="@string/dollaricon"
            android:layout_marginStart="5dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/transfer_btn"
            android:layout_width="150dp"
            android:layout_height="50dp"
            app:layout_constraintTop_toBottomOf="@id/dollar_icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="10dp"
            style="@style/TextAppearance.MaterialComponents.Subtitle2"
            android:backgroundTint="@color/black"
            android:textColor="@color/white"
            android:text="@string/transfer_balance"
            android:textSize="16sp"
            />
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/half_lay"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/transfer_btn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="10dp"
            android:padding="5dp"
            >

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/spiner_all_users"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:hint="@string/please_select_name_that_you_want_to_transfer"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                >

                <AutoCompleteTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:text="@{viewmodel.name}"/>

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/txt_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/amout_to_transfer"
                app:layout_constraintBottom_toBottomOf="@id/amout_to_transfer"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/amount"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:layout_marginStart="5dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/amout_to_transfer"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/txt_amount"
                app:layout_constraintTop_toBottomOf="@id/spiner_all_users"
                android:layout_marginTop="20dp"
                android:layout_marginStart="15dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edittext"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"/>
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/confirm_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/amout_to_transfer"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/black"
                android:text="@string/confirm"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:textAllCaps="false"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>