<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:padding="8dp"
        android:background="@color/white"
        >


        <TextView
            android:id="@+id/sender"
            style="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:text="@string/sender"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_sender"
            style="@style/TextAppearance.MaterialComponents.Subtitle1"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            tools:text="sherif abdelrhman"
            app:layout_constraintBottom_toBottomOf="@+id/sender"
            app:layout_constraintStart_toEndOf="@+id/sender"
            app:layout_constraintTop_toTopOf="@+id/sender" />

        <TextView
            android:id="@+id/receiver"
            style="@style/TextAppearance.MaterialComponents.Subtitle1"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:text="@string/receiver"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sender" />

        <TextView
            android:id="@+id/tv_receiver"
            style="@style/TextAppearance.MaterialComponents.Subtitle1"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            tools:text="mohamed abdelrhman"
            app:layout_constraintBottom_toBottomOf="@+id/receiver"
            app:layout_constraintStart_toEndOf="@+id/receiver"
            app:layout_constraintTop_toTopOf="@+id/receiver" />

        <TextView
            android:id="@+id/amount_transferred"
            style="@style/TextAppearance.MaterialComponents.Subtitle1"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:text="@string/amount"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/receiver"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/tv_amount_transfer"
            style="@style/TextAppearance.MaterialComponents.Subtitle1"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            tools:text="540"
            app:layout_constraintBottom_toBottomOf="@+id/amount_transferred"
            app:layout_constraintStart_toEndOf="@+id/amount_transferred"
            app:layout_constraintTop_toTopOf="@+id/amount_transferred" />

        <TextView
            android:id="@+id/doler_sign_item_record"
            style="@style/TextAppearance.MaterialComponents.Subtitle1"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/doolaricon"
            app:layout_constraintBottom_toBottomOf="@+id/tv_amount_transfer"
            app:layout_constraintStart_toEndOf="@+id/tv_amount_transfer"
            app:layout_constraintTop_toTopOf="@+id/tv_amount_transfer" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>